--- a/src/scss/pages/_cardOrder.scss
+++ b/src/scss/pages/_cardOrder.scss
@@ -199,7 +199,6 @@
     }
   }
 }
-
 .about_card {
   margin: 110px 0 0;
   padding: 48px 0;
@@ -251,7 +250,6 @@
           font-size: 17px;
           line-height: 56px;
           color: #000;
-          text-decoration: none;
           text-align: center;
           border-radius: 8px;
           transition: 0.2s cubic-bezier(0.39, 0.575, 0.565, 1);
@@ -451,7 +449,6 @@
     }
   }
 }
-
 .fin_modal {
   box-sizing: border-box;
   width: 800px;
@@ -552,6 +549,20 @@
 .card_order_form {
   padding: 110px 0 60px;
   background-color: #f9f9f9;
+  position: relative;
+  .yellow {
+    font-family: "TTFirsNeue Medium";
+    display: inline-block;
+    font-weight: 500;
+    font-size: 17px;
+    color: #000;
+    padding: 10px 20px;
+    border-radius: 8px;
+    background-color: $primary_color;
+    position: absolute;
+    top: 10px;
+    right: 20px;
+  }
   .form_container {
     max-width: 600px;
     margin: 0 auto;
