--- a/src/scss/layouts/_footer.scss
+++ b/src/scss/layouts/_footer.scss
@@ -24,6 +24,9 @@ footer {
         font-size: 18px;
         a {
           color: #000;
+          &:hover{
+            text-decoration: underline;
+          }
         }
       }
       ul {
@@ -33,6 +36,10 @@ footer {
           line-height: 1.43;
           a {
             color: $black_50;
+            &:hover{
+              color: $black_75;
+              text-decoration: underline;
+            }
           }
         }
       }
@@ -55,6 +62,9 @@ footer {
           border-radius: 50%;
           background: #f3f1f7 no-repeat center;
           transition: all 0.2s cubic-bezier(0.52, 0.01, 0.16, 1);
+          &:hover {
+            box-shadow: 0 0 2px 0 rgba(0,0,0, 0.35);
+        }
         }
       }
     }
@@ -204,6 +214,9 @@ footer {
         a {
           color: $black_50;
           text-decoration: underline;
+          &:hover{
+            text-decoration: none;
+          }
         }
       }
     }
@@ -217,6 +230,10 @@ footer {
         display: inline-block;
         color: $black_60;
         text-decoration: underline;
+        &:hover{
+          text-decoration: none;
+          color: black;
+        }
       }
     }
   }
